chore(devops): Adds ERROR_REPORTING environment variable to docker-compose file
Signed-off-by: Tobias Mieves <tobias.mieves@tu-dortmund.de>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - "8081:8000"
     volumes:
       - /var/lib/docker/volumes/examgenerator-db/:/app/db/
+    environment:
+      - ERROR_REPORTING=True
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
 
