--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # If set to true errors are reported back to the developers in order to fix the error
 ERROR_REPORTING=True
+SENTRY_ENVIRONMENT=produktion
+ALLOWED_HOSTS=your.domain
+CSRF_TRUSTED_ORIGINS=https://your.domain
