--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,25 +1,26 @@
 stages:
+  - install
   - test
-  - archive
+  - docker
   - release
 
-variables:
-  LICENSE_FINDER_CLI_OPTS: '--recursive'
-
-docker:
-  stage: archive
+docker:build:
+  stage: docker
   image: docker:20
   services:
     - docker:dind
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-    - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG -t $CI_REGISTRY_IMAGE:latest .
+    - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG -t $CI_REGISTRY_IMAGE:latest -t $CI_REGISTRY_IMAGE:develop .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
-    - docker push $CI_REGISTRY_IMAGE:latest
+    - if [[ $CI_COMMIT_TAG == *"develop"* ]]; then
+      docker push $CI_REGISTRY_IMAGE:develop;
+      else
+      docker push $CI_REGISTRY_IMAGE:latest;
+      fi
   only:
     - tags
-
 
 release:
   image: node:18-buster-slim
@@ -31,11 +32,11 @@ release:
     - semantic-release
   only:
     - main
+    - develop
 
-
-#include:
-#  - template: Dependency-Scanning.gitlab-ci.yml
-#  - template: Security/License-Scanning.gitlab-ci.yml
-#  - template: Security/SAST.gitlab-ci.yml
-#  - template: Secret-Detection.gitlab-ci.yml
-#  - template: Code-Quality.gitlab-ci.yml
+include:
+  - template: Dependency-Scanning.gitlab-ci.yml
+  - template: Security/License-Scanning.gitlab-ci.yml
+  - template: Security/SAST.gitlab-ci.yml
+  - template: Secret-Detection.gitlab-ci.yml
+  - template: Code-Quality.gitlab-ci.yml
