--- a/renovate.json
+++ b/renovate.json
@@ -1,25 +1,3 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "addLabels": ["dependencies"],
-  "reviewers": ["Tobiasff3200"],
-  "reviewersFromCodeOwners": true,
-  "reviewersSampleSize": 1,
-  "packageRules": [
-    {
-      "matchUpdateTypes": ["patch", "pin", "digest"],
-      "automerge": true
-    }
-  ],
-  "dependencyDashboard": true,
-  "dependencyDashboardAutoclose": true,
-  "extends": [
-    "config:base",
-    "github>whitesource/merge-confidence:beta",
-    "schedule:weekly"
-  ],
-  "prConcurrentLimit": 4,
-  "npm": {
-    "stabilityDays": 3
-  },
-  "lockFileMaintenance": { "enabled": true }
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
 }
