--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 include:
     - project: tobiasff3200/ci-cd
       file: .gitlab-ci.yml
+      inputs:
+        npm-root: "./"
       
 npm:build:
   rules:
