--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,8 @@ cython_debug/
 
 **/env/
 **/db.sqlite3
-/db/
+/db/db.sqlite3
 /staticfiles/
-node_modules
+/static/core/css/output.css
+/media/*
+/node_modules
