--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==5.1.3
+django-allauth[socialaccount]==65.3.1
+requests==2.32.3
 whitenoise==6.8.2
 gunicorn==23.0.0
 sentry-sdk[django]==2.18.0
