--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,14 @@
+---
 include:
   - project: tobiasff3200/ci-cd
-    file:
-      - .gitlab-ci.yml
+    file: .gitlab-ci.yml
+    inputs:
+      npm-root: "./"
+
+npm:build:
+  rules:
+    - when: never
+
+npm:test:
+  rules:
+    - when: never
