ci: Add sonar scanner job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,3 +12,43 @@ npm:build:
 npm:test:
   rules:
     - when: never
+
+sonarqube-check:
+  stage: lint
+  image: 
+    name: sonarsource/sonar-scanner-cli:11.3
+    entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  script: 
+    - sonar-scanner
+  allow_failure: true
+  only:
+    - merge_requests
+    - main
+    - develop
+
+sonarqube-vulnerability-report:
+  image: debian
+  stage: lint
+  before_script:
+    - apt update
+    - apt install -y curl
+  script:
+    - 'curl -u "${SONAR_TOKEN}:" "${SONAR_HOST_URL}/api/issues/gitlab_sast_export?projectKey=mieves.dev_wishlist_40b998bf-bf69-420f-830e-cc3aff5a59b0&branch=${CI_COMMIT_BRANCH}&pullRequest=${CI_MERGE_REQUEST_IID}" -o gl-sast-sonar-report.json'
+  allow_failure: true
+  only:
+    - merge_requests
+    - main
+    - develop
+  artifacts:
+    expire_in: 1 day
+    reports:
+      sast: gl-sast-sonar-report.json
+  needs:
+    - sonarqube-check
