--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,9 @@ services:
     environment:
       - DEBUG=True
       - SECRET_KEY=Test
+    healthcheck:
+      test: [ "CMD", "curl", "--fail", "http://localhost:8000/health/" ]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
